--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,11 @@ services:
       POSTGRES_DB: ${POSTGRES_DB}
     volumes:
       - pgdata:/var/lib/postgresql/data
-      
+    healthcheck:
+      test: ["CMD", "pg_isready", "-U", "${POSTGRES_USER}"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   backend:
     build:
@@ -17,15 +21,16 @@ services:
       dockerfile: Dockerfile
     container_name: kupipodari_backend
     restart: unless-stopped
+    env_file: .env        
     environment:
       JWT_SECRET: ${JWT_SECRET}
-      POSTGRES_HOST: database
-      POSTGRES_PORT: 5432
+      POSTGRES_PORT: ${POSTGRES_PORT}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_DB: ${POSTGRES_DB} 
     depends_on:
-      - database
+      database:
+        condition: service_healthy
     ports:
       - "4000:4000"
 
@@ -42,5 +47,3 @@ services:
 
 volumes:
   pgdata:
-
- 
