--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,5 +45,15 @@ services:
     ports:
       - "8081:80"
 
+  nginx:
+    image: nginx:latest
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./sites-enabled:/etc/nginx/sites-enabled:ro
+    restart: unless-stopped
+
 volumes:
   pgdata:
