--- a/.env
+++ b/.env
@@ -2,12 +2,11 @@
 PORT=4000
 
 # PostgreSQL
-POSTGRES_HOST=postgres
+POSTGRES_HOST=database
 POSTGRES_PORT=5432
 POSTGRES_USER=student
 POSTGRES_PASSWORD=student
-POSTGRES_DB=kupipodariday
-POSTGRES_PGDATA=/var/lib/postgresql/data
+POSTGRES_DB=kupipodariday 
 
 # JWT
 JWT_SECRET=your-secret-key
