--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,13 +47,15 @@ services:
 
   nginx:
     image: nginx:latest
+    volumes:
+      - ./frontend/nginx/conf.d:/etc/nginx/conf.d:ro
+      - ./frontend/build:/usr/share/nginx/html
     ports:
       - "80:80"
-      - "443:443"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./sites-enabled:/etc/nginx/sites-enabled:ro
-    restart: unless-stopped
+    depends_on:
+      - backend
+      - frontend
+
 
 volumes:
   pgdata:
