--- a/frontend/nginx/conf.d/default.conf
+++ b/frontend/nginx/conf.d/default.conf
@@ -6,7 +6,7 @@ server {
     root /usr/share/nginx/html;
     index index.html;
     try_files $uri $uri/ /index.html;
- 
+
     add_header 'Access-Control-Allow-Origin' '*';
     add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
     add_header 'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept, Authorization';
@@ -17,21 +17,21 @@ server {
     listen 80;
     server_name api.kupipodari.nomorepartiessite.ru;
 
-    location / {
-        proxy_pass http://backend:4000/;   
+    location /api/ { 
+        proxy_pass http://backend:4000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
+        proxy_set_header Connection "upgrade";
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
     }
- 
+
     location ~* ^/api/ {
         if ($request_method = 'OPTIONS') {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
             add_header 'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept, Authorization';
-            add_header 'Content-Type' 'text/plain charset=UTF-8';
+            add_header 'Content-Type' 'text/plain; charset=UTF-8';
             add_header 'Content-Length' '0';
             return 204;
         }
