--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,14 +1,19 @@
-# 1. build
-FROM node:16-alpine AS builder
+# 1
+FROM node:20-alpine AS builder
 WORKDIR /app
+
 COPY package*.json ./
 RUN npm ci
-COPY . .
-RUN npm run build   
 
-# 2. run
+COPY . .
+RUN npm run build   # → build/
+
+# 2
 FROM nginx:latest AS runner
+
 COPY --from=builder /app/build /usr/share/nginx/html
+
 COPY nginx/conf.d/default.conf /etc/nginx/conf.d/default.conf
+
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
