--- a/frontend/nginx/conf.d/default.conf
+++ b/frontend/nginx/conf.d/default.conf
@@ -1,5 +1,5 @@
 
-# Фронтенд (static files) 
+# Фронтенд 
 server {
     listen 80;
     listen 443 ssl http2;
@@ -7,9 +7,9 @@ server {
 
     root /usr/share/nginx/html;
     index index.html;
- 
+
     try_files $uri $uri/ /index.html;
- 
+
     add_header 'Access-Control-Allow-Origin' '*' always;
     add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
     add_header 'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept, Authorization' always;
@@ -19,22 +19,22 @@ server {
     ssl_protocols       TLSv1.2 TLSv1.3;
     ssl_ciphers         HIGH:!aNULL:!MD5;
 }
- 
+
 # Бэкенд (API) 
 server {
     listen 80;
     listen 443 ssl http2;
     server_name api.kupipodari.nomorepartiessite.ru;
- 
+
     ssl_certificate     /etc/ssl/certs/nginx.crt;
     ssl_certificate_key /etc/ssl/private/nginx.key;
     ssl_protocols       TLSv1.2 TLSv1.3;
     ssl_ciphers         HIGH:!aNULL:!MD5;
- 
+
     add_header 'Access-Control-Allow-Origin' '*' always;
     add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
     add_header 'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept, Authorization' always;
- 
+
     location /api/ {
         proxy_pass http://backend:4000;
         proxy_http_version 1.1;
@@ -43,7 +43,7 @@ server {
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
     }
- 
+
     if ($request_method = OPTIONS) {
         add_header 'Access-Control-Allow-Origin' '*';
         add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
