--- a/frontend/nginx/conf.d/default.conf
+++ b/frontend/nginx/conf.d/default.conf
@@ -1,55 +1,65 @@
-
-# Фронтенд 
 server {
     listen 80;
-    listen 443 ssl http2;
-    server_name kupipodari.nomorepartiessite.ru;
+    server_name localhost;
 
-    root /usr/share/nginx/html;
-    index index.html;
+    location / {
+        root   /usr/share/nginx/html;
+        index  index.html index.htm;
 
-    try_files $uri $uri/ /index.html;
-
-    add_header 'Access-Control-Allow-Origin' '*' always;
-    add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
-    add_header 'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept, Authorization' always;
-
-    ssl_certificate     /etc/ssl/certs/nginx.crt;
-    ssl_certificate_key /etc/ssl/private/nginx.key;
-    ssl_protocols       TLSv1.2 TLSv1.3;
-    ssl_ciphers         HIGH:!aNULL:!MD5;
-}
-
-# Бэкенд (API) 
-server {
-    listen 80;
-    listen 443 ssl http2;
-    server_name api.kupipodari.nomorepartiessite.ru;
-
-    ssl_certificate     /etc/ssl/certs/nginx.crt;
-    ssl_certificate_key /etc/ssl/private/nginx.key;
-    ssl_protocols       TLSv1.2 TLSv1.3;
-    ssl_ciphers         HIGH:!aNULL:!MD5;
-
-    add_header 'Access-Control-Allow-Origin' '*' always;
-    add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
-    add_header 'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept, Authorization' always;
-
-    location /api/ {
-        proxy_pass http://backend:4000/;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-    }
-
-    if ($request_method = OPTIONS) {
-        add_header 'Access-Control-Allow-Origin' '*';
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
-        add_header 'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept, Authorization';
-        add_header 'Content-Type' 'text/plain; charset=UTF-8';
-        add_header 'Content-Length' '0';
-        return 204;
+        try_files $uri $uri/ /index.html;
     }
 }
+# # Фронтенд 
+# server {
+#     listen 80;
+#     listen 443 ssl http2;
+#     server_name kupipodari.nomorepartiessite.ru;
+
+#     root /usr/share/nginx/html;
+#     index index.html;
+
+#     try_files $uri $uri/ /index.html;
+
+#     add_header 'Access-Control-Allow-Origin' '*' always;
+#     add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+#     add_header 'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept, Authorization' always;
+
+#     ssl_certificate     /etc/ssl/certs/nginx.crt;
+#     ssl_certificate_key /etc/ssl/private/nginx.key;
+#     ssl_protocols       TLSv1.2 TLSv1.3;
+#     ssl_ciphers         HIGH:!aNULL:!MD5;
+# }
+
+# # Бэкенд (API) 
+# server {
+#     listen 80;
+#     listen 443 ssl http2;
+#     server_name api.kupipodari.nomorepartiessite.ru;
+
+#     ssl_certificate     /etc/ssl/certs/nginx.crt;
+#     ssl_certificate_key /etc/ssl/private/nginx.key;
+#     ssl_protocols       TLSv1.2 TLSv1.3;
+#     ssl_ciphers         HIGH:!aNULL:!MD5;
+
+#     add_header 'Access-Control-Allow-Origin' '*' always;
+#     add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+#     add_header 'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept, Authorization' always;
+
+#     location /api/ {
+#         proxy_pass http://backend:4000/;
+#         proxy_http_version 1.1;
+#         proxy_set_header Upgrade $http_upgrade;
+#         proxy_set_header Connection "upgrade";
+#         proxy_set_header Host $host;
+#         proxy_cache_bypass $http_upgrade;
+#     }
+
+#     if ($request_method = OPTIONS) {
+#         add_header 'Access-Control-Allow-Origin' '*';
+#         add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
+#         add_header 'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept, Authorization';
+#         add_header 'Content-Type' 'text/plain; charset=UTF-8';
+#         add_header 'Content-Length' '0';
+#         return 204;
+#     }
+# }
