--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   database:
     image: postgres:15-alpine
@@ -12,6 +10,8 @@ services:
       POSTGRES_DB: ${POSTGRES_DB}
     volumes:
       - pgdata:/var/lib/postgresql/data
+    networks:
+      - kupipodari_net
     healthcheck:
       test: ["CMD", "pg_isready", "-U", "${POSTGRES_USER}"]
       interval: 5s
@@ -35,10 +35,10 @@ services:
     depends_on:
       database:
         condition: service_healthy
-    ports:
-      - "4000:4000"
     networks:
       - kupipodari_net
+    ports:
+      - "4000:4000"
 
   frontend:
     build:
@@ -49,10 +49,10 @@ services:
     env_file: .env
     depends_on:
       - backend
-    ports:
-      - "8081:80"
     networks:
       - kupipodari_net
+    ports:
+      - "8081:80"
 
 volumes:
   pgdata:
