--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     restart: unless-stopped
     env_file: .env
     environment:
-      PORT: ${PORT}
+      PORT: 4000
       JWT_SECRET: ${JWT_SECRET}
       POSTGRES_HOST: database
       POSTGRES_PORT: 5432
